--- a/ngex5.ipynb
+++ b/ngex5.ipynb
@@ -16,10 +16,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Load the Titanic dataset\u001b[39;00m\n\u001b[0;32m      5\u001b[0m titanic \u001b[38;5;241m=\u001b[39m sns\u001b[38;5;241m.\u001b[39mload_dataset(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitanic\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32md:\\ProgramData\\anaconda3\\Lib\\site-packages\\seaborn\\__init__.py:5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m  \u001b[38;5;66;03m# noqa: F401,F403\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpalettes\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m  \u001b[38;5;66;03m# noqa: F401,F403\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrelational\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m  \u001b[38;5;66;03m# noqa: F401,F403\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mregression\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m  \u001b[38;5;66;03m# noqa: F401,F403\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcategorical\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m  \u001b[38;5;66;03m# noqa: F401,F403\u001b[39;00m\n",
+      "File \u001b[1;32md:\\ProgramData\\anaconda3\\Lib\\site-packages\\seaborn\\relational.py:17\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_oldcore\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m      9\u001b[0m     VectorPlotter,\n\u001b[0;32m     10\u001b[0m )\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m     12\u001b[0m     locator_to_legend_entries,\n\u001b[0;32m     13\u001b[0m     adjust_legend_subtitles,\n\u001b[0;32m     14\u001b[0m     _default_color,\n\u001b[0;32m     15\u001b[0m     _deprecate_ci,\n\u001b[0;32m     16\u001b[0m )\n\u001b[1;32m---> 17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_statistics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m EstimateAggregator\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01maxisgrid\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FacetGrid, _facet_docs\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_docstrings\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DocstringComponents, _core_docs\n",
+      "File \u001b[1;32md:\\ProgramData\\anaconda3\\Lib\\site-packages\\seaborn\\_statistics.py:31\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 31\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstats\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m gaussian_kde\n\u001b[0;32m     32\u001b[0m     _no_scipy \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\scipy\\stats\\__init__.py:616\u001b[0m\n\u001b[0;32m    614\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mstats\n\u001b[0;32m    615\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m qmc\n\u001b[1;32m--> 616\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_multivariate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m    617\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m contingency\n\u001b[0;32m    618\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcontingency\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m chi2_contingency\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\scipy\\stats\\_multivariate.py:14\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_continuous_distns\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m norm\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_discrete_distns\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m binom\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _mvn, _covariance, _rcont\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_qmvnt\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _qmvt\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_morestats\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m directional_stats\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\scipy\\stats\\_rcont\\__init__.py:2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrcont\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m rvs_rcont1, rvs_rcont2\n\u001b[0;32m      4\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrvs_rcont1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrvs_rcont2\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[1;32m<frozen importlib._bootstrap>:405\u001b[0m, in \u001b[0;36mparent\u001b[1;34m(self)\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Load the Titanic dataset\n",
+    "df = sns.load_dataset('titanic')\n",
+    "\n",
+    "# Print the first 10 rows of the dataset\n",
+    "print(\"First 10 rows of the dataset:\")\n",
+    "print(df.head(10))\n",
+    "\n",
+    "# Print the last 20 rows of the dataset\n",
+    "print(\"\\nLast 20 rows of the dataset:\")\n",
+    "print(df.tail(20))\n",
+    "\n",
+    "# Print dataset's information\n",
+    "print(\"\\nDataset's information:\")\n",
+    "print(df.info())\n",
+    "\n",
+    "# Describe the dataset\n",
+    "print(\"\\nDataset description:\")\n",
+    "print(df.describe())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,7 +83,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Load the Titanic dataset\n",
+    "df = sns.load_dataset('titanic')\n",
+    "\n",
+    "# Count missing values in each column\n",
+    "missing_values = df.isnull().sum()\n",
+    "print(\"Missing values in each column:\\n\", missing_values)\n",
+    "\n",
+    "# Plotting the age distribution to understand its nature\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.histplot(df['age'].dropna(), kde=True)\n",
+    "plt.title('Age Distribution')\n",
+    "plt.xlabel('Age')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.show()\n",
+    "\n",
+    "# Calculate mean and median age\n",
+    "mean_age = df['age'].mean()\n",
+    "median_age = df['age'].median()\n",
+    "print(f\"Mean Age: {mean_age}\")\n",
+    "print(f\"Median Age: {median_age}\")\n",
+    "\n",
+    "# Fill missing values in the 'Age' column with the median age\n",
+    "df['age'].fillna(median_age, inplace=True)\n",
+    "\n",
+    "# Fill missing values in the 'Cabin' column with 'Unknown'\n",
+    "df['cabin'].fillna('Unknown', inplace=True)\n",
+    "\n",
+    "# Fill missing values in the 'Embarked' column with the mode\n",
+    "mode_embarked = df['embarked'].mode()[0]\n",
+    "df['embarked'].fillna(mode_embarked, inplace=True)\n",
+    "\n",
+    "# Convert non-numeric to numeric with errors becoming NaN, then fill NaN with mode\n",
+    "df['survived'] = pd.to_numeric(df['survived'], errors='coerce')\n",
+    "df['survived'].fillna(df['survived'].mode()[0], inplace=True)\n",
+    "\n",
+    "# Convert 'Fare' to numeric, coercing errors to NaN\n",
+    "df['fare'] = pd.to_numeric(df['fare'], errors='coerce')\n",
+    "\n",
+    "# Fill missing values in the 'Fare' column with the median fare\n",
+    "median_fare = df['fare'].median()\n",
+    "df['fare'].fillna(median_fare, inplace=True)\n",
+    "\n",
+    "# Detecting outliers in the 'Age' column\n",
+    "Q1 = df['age'].quantile(0.25)\n",
+    "Q3 = df['age'].quantile(0.75)\n",
+    "IQR = Q3 - Q1\n",
+    "outliers = ((df['age'] < (Q1 - 1.5 * IQR)) | (df['age'] > (Q3 + 1.5 * IQR)))\n",
+    "print(\"Outliers in the 'Age' column:\\n\", df[outliers])"
+   ]
   },
   {
    "cell_type": "code",
@@ -67,7 +161,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Load the Titanic dataset\n",
+    "df = sns.load_dataset('titanic')\n",
+    "\n",
+    "# Calculate the average fare by passenger class\n",
+    "avg_fare_pclass = df.groupby('pclass')['fare'].mean()\n",
+    "\n",
+    "# Plot the average fare by passenger class using a bar plot\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.barplot(x=avg_fare_pclass.index, y=avg_fare_pclass.values)\n",
+    "plt.title('Average Fare by Passenger Class')\n",
+    "plt.xlabel('Passenger Class')\n",
+    "plt.ylabel('Average Fare')\n",
+    "plt.show()\n",
+    "\n",
+    "# Calculate the average fare by sex\n",
+    "avg_fare_sex = df.groupby('sex')['fare'].mean()\n",
+    "\n",
+    "# Plot the average fare by sex using a bar plot\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.barplot(x=avg_fare_sex.index, y=avg_fare_sex.values, color=['blue', 'green'])\n",
+    "plt.title('Average Fare by Sex')\n",
+    "plt.xlabel('Sex')\n",
+    "plt.ylabel('Average Fare')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,7 +218,114 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Load the Titanic dataset\n",
+    "df = sns.load_dataset('titanic')\n",
+    "\n",
+    "# Plot the distribution of 'Age'\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.histplot(df['age'].dropna(), kde=True)\n",
+    "plt.title('Distribution of Age')\n",
+    "plt.xlabel('Age')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot the distribution of 'Fare'\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.histplot(df['fare'].dropna(), kde=True)\n",
+    "plt.title('Distribution of Fare')\n",
+    "plt.xlabel('Fare')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot the distribution of 'Pclass'\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.countplot(x='pclass', data=df)\n",
+    "plt.title('Distribution of Passenger Class')\n",
+    "plt.xlabel('Passenger Class')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot the distribution of 'Survived'\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.countplot(x='survived', data=df)\n",
+    "plt.title('Distribution of Survival Status')\n",
+    "plt.xlabel('Survived')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot the distribution of 'Embarked'\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.countplot(x='embarked', data=df, order=['S', 'C', 'Q'])\n",
+    "plt.title('Distribution of Embarked Port')\n",
+    "plt.xlabel('Embarked')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot the distribution of 'Fare' grouped by 'Survived'\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(x='survived', y='fare', data=df)\n",
+    "plt.title('Fare Distribution Grouped by Survival Status')\n",
+    "plt.xlabel('Survived')\n",
+    "plt.ylabel('Fare')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot the distribution of 'Fare' grouped by 'Pclass'\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(x='pclass', y='fare', data=df)\n",
+    "plt.title('Fare Distribution Grouped by Passenger Class')\n",
+    "plt.xlabel('Passenger Class')\n",
+    "plt.ylabel('Fare')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot the distribution of 'Age' grouped by 'Survived'\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(x='survived', y='age', data=df)\n",
+    "plt.title('Age Distribution Grouped by Survival Status')\n",
+    "plt.xlabel('Survived')\n",
+    "plt.ylabel('Age')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot the distribution of 'Age' grouped by 'PClass'\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(x='pclass', y='age', data=df)\n",
+    "plt.title('Age Distribution Grouped by Passenger Class')\n",
+    "plt.xlabel('Passenger Class')\n",
+    "plt.ylabel('Age')\n",
+    "plt.show()\n",
+    "\n",
+    "# Combine 'SibSp' and 'Parch' and plot its distribution grouped by 'Survived'\n",
+    "df['family_size'] = df['sibsp'] + df['parch'] + 1\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(x='survived', y='family_size', data=df)\n",
+    "plt.title('Family Size Distribution Grouped by Survival Status')\n",
+    "plt.xlabel('Survived')\n",
+    "plt.ylabel('Family Size')\n",
+    "plt.show()\n",
+    "\n",
+    "# Combine 'SibSp' and 'Parch' and plot its distribution grouped by 'Pclass'\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(x='pclass', y='family_size', data=df)\n",
+    "plt.title('Family Size Distribution Grouped by Passenger Class')\n",
+    "plt.xlabel('Passenger Class')\n",
+    "plt.ylabel('Family Size')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot a distribution between 'Age' and 'Fare' to see if there's any relationship\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.scatterplot(x='age', y='fare', data=df.dropna(subset=['age', 'fare']))\n",
+    "plt.title('Relationship between Age and Fare')\n",
+    "plt.xlabel('Age')\n",
+    "plt.ylabel('Fare')\n",
+    "plt.show()\n",
+    "\n",
+    "# Are there any other possibilities to show relationships?\n",
+    "# Yes, we can use pair plots, heatmaps of correlations, or combined plots like facet grids."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,7 +343,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Load the Titanic dataset\n",
+    "df = sns.load_dataset('titanic')\n",
+    "\n",
+    "# Drop columns that are non-numeric or don't make sense to include in a correlation matrix\n",
+    "df_numeric = df.select_dtypes(include=[float, int]).drop(['age', 'fare'], errors='ignore')\n",
+    "\n",
+    "# Calculate the correlation matrix\n",
+    "corr_matrix = df_numeric.corr()\n",
+    "\n",
+    "# Plot the correlation matrix using a heatmap\n",
+    "plt.figure(figsize=(12, 10))\n",
+    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
+    "plt.title('Correlation Matrix of the Dataset')\n",
+    "plt.show()\n",
+    "\n",
+    "# Calculate the correlation between 'Age' and 'Fare'\n",
+    "age_fare_corr = df[['age', 'fare']].corr().loc['age', 'fare']\n",
+    "print(f\"Correlation between 'Age' and 'Fare': {age_fare_corr:.2f}\")\n",
+    "\n",
+    "# Calculate additional correlations\n",
+    "pclass_fare_corr = df[['pclass', 'fare']].corr().loc['pclass', 'fare']\n",
+    "print(f\"Correlation between 'Pclass' and 'Fare': {pclass_fare_corr:.2f}\")\n",
+    "\n",
+    "parch_survived_corr = df[['parch', 'survived']].corr().loc['parch', 'survived']\n",
+    "print(f\"Correlation between 'Parch' and 'Survived': {parch_survived_corr:.2f}\")\n",
+    "\n",
+    "sibsp_survived_corr = df[['sibsp', 'survived']].corr().loc['sibsp', 'survived']\n",
+    "print(f\"Correlation between 'SibSp' and 'Survived': {sibsp_survived_corr:.2f}\")\n",
+    "\n",
+    "embarked_survived_corr = df[['embarked', 'survived']].corr().loc['embarked', 'survived']\n",
+    "print(f\"Correlation between 'Embarked' and 'Survived': {embarked_survived_corr:.2f}\")"
+   ]
   }
  ],
  "metadata": {
@@ -132,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
